# cpp_mylib

./: .gitignore  CMakeLists.txt  README.md
include/: Split.h
lib/: CMakeLists.txt  Split.cpp
test/: CMakeLists.txt  test_Split.cpp
